feat: improve genai

--- a/work_phase_3/genai_mt_acknowledgement.html
+++ b/work_phase_3/genai_mt_acknowledgement.html
@@ -88,6 +88,22 @@
                             <tr>
                                 <td>Claude</td>
                                 <td>
+                                    I used Claude to assess all my annotations (sitemap, style guide), based on the
+                                    WCAG guidelines, UX/UI principles and ethical considerations.
+                                </td>
+                                <td>
+                                    "
+                                    This is my annotations for the CrumbsMap Sitemap, can you give me feedbacks
+                                    based on WCAG guidelines, UX/UI principles and ethical considerations regarding this
+                                    feature?
+                                    "
+                                </td>
+                                <td>Wireframe in the behavorial page</td>
+                                <td>Oct 2025</td>
+                            </tr>
+                            <tr>
+                                <td>Claude</td>
+                                <td>
                                     Same as above, I have difficulties following the IA slides on creating the
                                     sidebar component that opens up when clicking on the images in the gallery.
                                 </td>
