feat: add plugin to sitemap

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -153,6 +153,25 @@
                                             about the platform, and what they can expect from it.
                                         </div>
                                     </div>
+
+                                    <div class="accordion-item p-t-4">
+                                        <button class="accordion-header">▷ Newsletter Plugin</button>
+                                        <div class="accordion-content">
+                                            This section is to prompt users to subscribe to the newsletter plugin
+                                            requested by the client. For accessibility, this form input and to adhere to
+                                            WCAG 3.3.2 (Labels and Instructions), Labels and Instructions regarding what
+                                            is required to fill will be made visible to the users.
+                                            Also, error identification and suggestions will also be implemented when
+                                            filling the different form fields to adhere to WCAG 3.3.1 (Error
+                                            Identification).
+
+                                            <br>
+                                            <br>
+                                            To mitigate ethical risk, a dedicated page called "Ethical Response" is
+                                            available to explain how the newsletter plugin will be implemented in an
+                                            ethical way.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
