feat: home page

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -32,18 +32,22 @@
         </ul>
     </nav>
     <main>
-        <section class="hero" role="banner">
-            <div class="hero-overlay"></div>
-            <div class="hero-content">
-                <div class="hero-text">
+        <section class="hero">
+            <div class="hero-container" aria-label="Hero Section">
+                <div class="hero-content">
                     <p class="hero-eyebrow">Welcome to FeedCrumbs</p>
                     <h1 class="hero-title">Share Your Culinary Heritage</h1>
-                    <p class="hero-subtitle">Connect with a community that celebrates traditional recipes and cultural
-                        food stories from every corner of Australia</p>
+                    <p class="hero-subtitle">Connect with a vibrant community that celebrates traditional recipes
+                        and
+                        cultural food stories from every corner of Australia. Your heritage deserves to be shared.</p>
                     <div class="hero-actions">
-                        <a href="#join" class="button button-primary">Join Us</a>
+                        <a href="#join" class="button button-primary">Join us</a>
                         <a href="#about" class="button button-secondary">Learn More</a>
                     </div>
+                </div>
+                <div class="hero-image">
+                    <img src="./assets/images/bg.png"
+                        alt="Diverse community sharing traditional cuisines together at a festive gathering">
                 </div>
             </div>
         </section>
