feat: highlight in home page

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -51,6 +51,61 @@
                 </div>
             </div>
         </section>
+
+        <section class="highlights" aria-labelledby="highlights-title">
+            <div class="highlights-container">
+                <header class="highlights-header">
+                    <span class="highlights-eyebrow">Discover Our Features</span>
+                    <h2 id="highlights-title" class="highlights-title">Share, Compete, and Explore</h2>
+                    <p class="highlights-description">Three unique ways to celebrate your culinary heritage and connect
+                        with food lovers across Australia.</p>
+                </header>
+
+                <div class="highlights-grid">
+                    <article class="card">
+                        <div class="card-image">
+                            <img src="./assets/images/bg.png"
+                                alt="Community members sharing food stories and recipes on FeedCrumbs timeline">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">FeedCrumbs</h3>
+                            <p class="card-description">Share your culinary stories, traditional recipes, and food
+                                experiences with our community. Connect through posts, photos, and meaningful
+                                conversations about cultural cuisine.</p>
+                            <a href="#feedcrumbs" class="card-link">Explore Timeline</a>
+                        </div>
+                    </article>
+
+                    <article class="card">
+                        <div class="card-image">
+                            <img src="./assets/images/bg.png"
+                                alt="Exciting cooking competition showcasing traditional cultural dishes">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Crumbings</h3>
+                            <p class="card-description">Join exciting cooking competitions that celebrate traditional
+                                and cultural cuisines. Showcase your skills, learn from others, and earn recognition for
+                                your heritage dishes.</p>
+                            <a href="#crumbings" class="card-link">View Competitions</a>
+                        </div>
+                    </article>
+
+                    <article class="card">
+                        <div class="card-image">
+                            <img src="./assets/images/bg.png"
+                                alt="Interactive map showing cultural food locations across Australia">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">CrumbsMap</h3>
+                            <p class="card-description">Discover cultural food experiences near you. Explore geolocated
+                                posts, find authentic restaurants, and connect with local culinary traditions across
+                                Australia.</p>
+                            <a href="#crumbsmap" class="card-link">Explore Map</a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
