feat: simplify container and highlight

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -32,6 +32,7 @@
         </ul>
     </nav>
     <main>
+        <!-- Hero Section -->
         <section class="hero">
             <div class="hero-container " aria-label="Hero Section">
                 <div class="hero-content">
@@ -52,8 +53,9 @@
             </div>
         </section>
 
-        <section class="highlights " aria-labelledby="highlights-title">
-            <div class="highlights-container">
+        <div class="container">
+            <!-- Highlight Section -->
+            <section class="highlights" aria-labelledby="highlights-title">
                 <header class="highlights-header">
                     <span class="highlights-eyebrow">Discover Our Features</span>
                     <h2 id="highlights-title" class="highlights-title">Share, Compete, and Explore</h2>
@@ -104,8 +106,9 @@
                         </div>
                     </article>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
+
     </main>
 </body>
 
