feat: improve highlight

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -53,7 +53,7 @@
             </div>
         </section>
 
-        <div class="container">
+        <div class="container mt-16">
             <!-- Highlight Section -->
             <section class="highlights" aria-labelledby="highlights-title">
                 <header class="highlights-header">
