feat: add about section

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -107,6 +107,48 @@
                     </article>
                 </div>
             </section>
+
+            <!-- About -->
+            <section class="about " aria-labelledby="about-title">
+                <header class="about-header">
+                    <span class="about-eyebrow">Our Story</span>
+                    <h2 id="about-title" class="about-title">Get to Know FeedCrumbs</h2>
+                    <p class="about-description">A platform built on pride, warmth, and understanding—where every dish
+                        tells a story and every story builds connection.</p>
+                </header>
+
+                <div class="about-content">
+                    <article class="about-item">
+                        <div class="about-image">
+                            <img src="./assets/images/bg.png"
+                                alt="Families gathering around traditional dishes celebrating their cultural heritage">
+                        </div>
+                        <div class="about-text">
+                            <h3 class="about-item-title">Who is CCI?</h3>
+                            <p class="about-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Perspiciatis quidem mollitia maiores ipsum voluptates vel ullam consequatur dolores!
+                                Numquam rerum ea sequi sed, nemo et amet sit laborum voluptates velit officia mollitia
+                                tempore incidunt vitae veritatis, quas nam eveniet iusto temporibus accusantium ex
+                                labore cum. Voluptates esse doloremque animi itaque.</p>
+                        </div>
+                    </article>
+
+                    <article class="about-item about-item-reverse">
+                        <div class="about-image">
+                            <img src="./assets/images/bg.png"
+                                alt="Diverse community members connecting through shared appreciation of cultural cuisine">
+                        </div>
+                        <div class="about-text">
+                            <h3 class="about-item-title">What are our values and missions?</h3>
+                            <p class="about-item-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Quisquam pariatur neque sapiente error inventore perferendis ratione sed maxime vel
+                                atque commodi ullam ipsum, minus dignissimos nostrum eos iure, beatae nobis aliquid
+                                voluptatem. Asperiores consequatur cumque consequuntur. Recusandae, voluptas ipsa.
+                                Commodi vitae corporis velit iure sunt quaerat similique alias adipisci officia.</p>
+                        </div>
+                    </article>
+                </div>
+            </section>
         </div>
 
     </main>
