feat: add footer section

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -109,7 +109,7 @@
             </section>
 
             <!-- About -->
-            <section class="about " aria-labelledby="about-title">
+            <section class="about" aria-labelledby="about-title">
                 <header class="about-header">
                     <span class="about-eyebrow">Our Story</span>
                     <h2 id="about-title" class="about-title">Get to Know FeedCrumbs</h2>
@@ -150,7 +150,46 @@
                 </div>
             </section>
         </div>
-
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-brand">
+                        <h3 class="footer-title">FeedCrumbs</h3>
+                        <p class="footer-tagline">Share Your Culinary Heritage</p>
+                    </div>
+                    <nav class="footer-nav" aria-label="Footer Navigation">
+                        <div class="footer-links">
+                            <h4 class="footer-heading">Explore</h4>
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="feedcrumbs.html">FeedCrumbs</a></li>
+                                <li><a href="crumbings.html">Crumbings</a></li>
+                                <li><a href="crumbsmap.html">CrumbsMap</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-links">
+                            <h4 class="footer-heading">Support</h4>
+                            <ul>
+                                <li><a href="help.html">Help Center</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="guidelines.html">Community Guidelines</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-links">
+                            <h4 class="footer-heading">Legal</h4>
+                            <ul>
+                                <li><a href="privacy.html">Privacy Policy</a></li>
+                                <li><a href="terms.html">Terms of Service</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+                <div class="footer-bottom">
+                    <p class="footer-copyright">&copy; 2025 FeedCrumbs. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
