--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -15,20 +15,14 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="index.html" aria-current="page"><span class="icon">🏚️</span></a></li>
-            <li><a href="site_map.html"><span class="icon">🗺️</span></a></li>
-            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
-            <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
-            <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
+            <li><a href="home_page.html" aria-current="page"><span class="icon">🏚️</span></a></li>
+            <li><a href="feed_crumbs.html"><span class="icon">🗺️</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
-            <li><a href="index.html" aria-current="page"><span class="icon">Home</span></a></li>
-            <li><a href="site_map.html"><span class="icon">Site Map</span></a></li>
-            <li><a href="style_guide.html"><span class="icon">Style Guide</span></a></li>
-            <li><a href="ethical_response.html"><span class="icon">Ethical Response</span></a></li>
-            <li><a href="genai_mt_acknowledgement.html"><span class="icon">Gen AI</span></a></li>
+            <li><a href="home_page.html" aria-current="page"><span class="icon">Home</span></a></li>
+            <li><a href="feed_crumbs.html"><span class="icon">FeedCrumbs</span></a></li>
         </ul>
     </nav>
     <main>
