feat: feed layout

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/page_css/home_page.css" />
+    <link rel="stylesheet" href="css/page_css/feed_crumbs.css" />
 </head>
 
 <body>
@@ -25,7 +25,21 @@
             <li><a href="feed_crumbs.html" aria-current="page"><span class="icon">FeedCrumbs</span></a></li>
         </ul>
     </nav>
-    <main>
+    <main class="feed-layout-container">
+        <div class="feeds-card-container">
+            <div class="feeds-card">
+                Card 1
+            </div>
+            <div class="feeds-card">
+                Card 2
+            </div>
+        </div>
+        <div class="feed-crumbs">
+            Timeline / Feed
+        </div>
+        <div class="sidebar">
+            Sidebar
+        </div>
 
     </main>
 </body>
