chore: refactor components

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="feed-crumbs">
-            <div class="feed-controls">
+            <div class="crumbs-controls">
                 <div class="search-bar">
                     <input type="text" class="search-input" placeholder="Search recipes, ingredients, cuisines...">
                     <button class="button button-primary">Search</button>
