feat: add profile and friend reccommendation

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -28,10 +28,43 @@
     <main class="feed-layout-container">
         <div class="feeds-card-container">
             <div class="feeds-card">
-                Card 1
+                <h4 class="card-title">Who to Follow</h4>
+                <div class="friend-list">
+                    <div class="friend-item">
+                        <div class="friend-avatar">👨‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Lionel Messi</p>
+                            <p class="friend-username">@leomessi</p>
+                        </div>
+                        <button class="button small-button button-primary">Follow</button>
+                    </div>
+                    <div class="friend-item">
+                        <div class="friend-avatar">👩‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Cristiano</p>
+                            <p class="friend-username">@cronaldo</p>
+                        </div>
+                        <button class="button small-button button-primary">Follow</button>
+                    </div>
+                    <div class="friend-item">
+                        <div class="friend-avatar">🧑‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Neymar Junior</p>
+                            <p class="friend-username">@neymarjr</p>
+                        </div>
+                        <button class="button small-button button-primary">Follow</button>
+                    </div>
+                </div>
             </div>
+
             <div class="feeds-card">
-                Card 2
+                <div class="profile-card">
+                    <div class="profile-avatar">👨‍💻</div>
+                    <div>
+                        <p class="profile-name">Dwiputra Sam Mulia</p>
+                        <p class="profile-username">@samdyra</p>
+                    </div>
+                </div>
             </div>
         </div>
 
