feat: sidebar rankings

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -15,14 +15,14 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="home_page.html"><span class="icon">🏚️</span></a></li>
-            <li><a href="feed_crumbs.html" aria-current="page"><span class="icon">🗺️</span></a></li>
+            <li><a href="home_page.html"><span>🏚️</span></a></li>
+            <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
-            <li><a href="home_page.html"><span class="icon">Home</span></a></li>
-            <li><a href="feed_crumbs.html" aria-current="page"><span class="icon">FeedCrumbs</span></a></li>
+            <li><a href="home_page.html"><span>Home</span></a></li>
+            <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
         </ul>
     </nav>
     <main class="feed-layout-container">
@@ -101,7 +101,143 @@
             </div>
         </div>
         <div class="sidebar">
-            Sidebar
+            <div class="ranking-section">
+                <div class="ranking-header">
+                    <span class="ranking-icon">👨‍🍳</span>
+                    <h4>Monthly Top Chefs</h4>
+                </div>
+                <div class="ranking-list">
+                    <div class="ranking-item">
+                        <div class="rank rank-1">1</div>
+                        <div class="friend-avatar">👨‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Marco Rossi</p>
+                            <p class="friend-username">Italian Cuisine</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">⭐</span>
+                            <span>4.9</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-2">2</div>
+                        <div class="friend-avatar">👩‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Sarah Chen</p>
+                            <p class="friend-username">Asian Fusion</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">⭐</span>
+                            <span>4.8</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-3">3</div>
+                        <div class="friend-avatar">🧑‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Ahmed Hassan</p>
+                            <p class="friend-username">Middle Eastern</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">⭐</span>
+                            <span>4.7</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-other">4</div>
+                        <div class="friend-avatar">👨‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Luis García</p>
+                            <p class="friend-username">Mexican</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">⭐</span>
+                            <span>4.6</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-other">5</div>
+                        <div class="friend-avatar">👩‍🍳</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Yuki Tanaka</p>
+                            <p class="friend-username">Japanese</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">⭐</span>
+                            <span>4.5</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ranking-section">
+                <div class="ranking-header">
+                    <span class="ranking-icon">🍽️</span>
+                    <h4>Trending Cuisines</h4>
+                </div>
+                <div class="ranking-list">
+                    <div class="ranking-item">
+                        <div class="rank rank-1">1</div>
+                        <div class="friend-avatar">🍝</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Carbonara</p>
+                            <p class="friend-username">Italian</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">❤️</span>
+                            <span>2.4k</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-2">2</div>
+                        <div class="friend-avatar">🥟</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Dumplings</p>
+                            <p class="friend-username">Chinese</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">❤️</span>
+                            <span>2.1k</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-3">3</div>
+                        <div class="friend-avatar">🌮</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Tacos al Pastor</p>
+                            <p class="friend-username">Mexican</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">❤️</span>
+                            <span>1.9k</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-other">4</div>
+                        <div class="friend-avatar">🍜</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Ramen</p>
+                            <p class="friend-username">Japanese</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">❤️</span>
+                            <span>1.7k</span>
+                        </div>
+                    </div>
+                    <div class="ranking-item">
+                        <div class="rank rank-other">5</div>
+                        <div class="friend-avatar">🥘</div>
+                        <div class="friend-info">
+                            <p class="friend-name">Paella</p>
+                            <p class="friend-username">Spanish</p>
+                        </div>
+                        <div class="interactions">
+                            <span class="icon">❤️</span>
+                            <span>1.5k</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
