--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -17,12 +17,14 @@
         <ul>
             <li><a href="home_page.html"><span>🏚️</span></a></li>
             <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
+            <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
             <li><a href="home_page.html"><span>Home</span></a></li>
             <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
+            <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
         </ul>
     </nav>
     <main class="feed-layout-container">
