refactor: crumbs container

--- a/work_phase_4/crumbs_map.html
+++ b/work_phase_4/crumbs_map.html
@@ -27,8 +27,8 @@
             <li><a href="crumbs_map.html" aria-current="page"><span>CrumbsMap</span></a></li>
         </ul>
     </nav>
-    <main class="feed-layout-container">
-        <div class="feed-crumbs">
+    <main class="crumbs-layout-container">
+        <div class="crumbs-container">
             <div class="crumbs-controls">
                 <div class="search-bar">
                     <input type="text" class="search-input" placeholder="Search recipes, ingredients, cuisines...">
