--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -27,7 +27,7 @@
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
         </ul>
     </nav>
-    <main class="feed-layout-container">
+    <main class="crumbs-layout-container">
         <div class="feeds-card-container">
             <div class="feeds-card">
                 <h4 class="card-title">Who to Follow</h4>
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="feed-crumbs">
+        <div class="crumbs-container">
             <div class="crumbs-controls">
                 <div class="search-bar">
                     <input type="text" class="search-input" placeholder="Search recipes, ingredients, cuisines...">
