feat: add map container

--- a/work_phase_4/crumbs_map.html
+++ b/work_phase_4/crumbs_map.html
@@ -42,14 +42,15 @@
                 </div>
             </div>
 
-            <div class="timeline">
-
+            <div class="map-container" id="mapContainer">
+                <img src="./assets/images/map.jpg" alt="Map of Indigenous Australia">
             </div>
         </div>
         <div class="sidebar">
 
         </div>
     </main>
+    <script type="module" src='js/crumbs_map.js'></script>
 </body>
 
 </html>
