feat: mobile sidebar

--- a/work_phase_4/crumbs_map.html
+++ b/work_phase_4/crumbs_map.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <button class="sidebar-toggle" id="sidebarToggle" aria-label="Toggle sidebar">
+        ☰
+    </button>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="home_page.html"><span>🏚️</span></a></li>
