feat: add create crumbs button

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -59,8 +59,8 @@
                 </div>
             </div>
 
-            <div class="feeds-card">
-                <div class="profile-card">
+            <div class="feeds-card ">
+                <div class="profile-card ">
                     <div class="profile-avatar">👨‍💻</div>
                     <div>
                         <p class="profile-name">Dwiputra Sam Mulia</p>
@@ -74,7 +74,10 @@
             <div class="crumbs-controls">
                 <div class="search-bar">
                     <input type="text" class="search-input" placeholder="Search recipes, ingredients, cuisines...">
-                    <button class="button button-primary">Search</button>
+                    <div class="buttons-group">
+                        <button class="button button-primary">Search</button>
+                        <button class="button button-secondary">Create Crumbs</button>
+                    </div>
                 </div>
                 <div class="filter-options">
                     <button class="filter-btn active">All</button>
