--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/page_css/feed_crumbs.css" />
 </head>
 
@@ -230,6 +231,74 @@
                 </div>
             </div>
         </div>
+
+        <!-- Modal Create Crumbs -->
+        <div id="create-crumbs-modal" class="modal" role="dialog" aria-labelledby="modal-title" aria-modal="true"
+            hidden>
+            <div class="modal-overlay" aria-hidden="true"></div>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 id="modal-title">Create New Crumb</h2>
+                    <button type="button" class="modal-close" aria-label="Close modal">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+
+                <form id="feed-form" class="crumb-form" novalidate>
+                    <div class="form-group">
+                        <label for="name" class="form-label">
+                            Full Name <span class="required" aria-label="required">*</span>
+                        </label>
+                        <input type="text" id="name" name="name" class="form-input" required aria-required="true"
+                            aria-describedby="name-error">
+                        <p id="name-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="form-label">
+                            Email <span class="required" aria-label="required">*</span>
+                        </label>
+                        <input type="email" id="email" name="email" class="form-input" required aria-required="true"
+                            aria-describedby="email-error">
+                        <p id="email-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message" class="form-label">
+                            Message <span class="required" aria-label="required">*</span>
+                        </label>
+                        <textarea id="message" name="message" class="form-input form-textarea" rows="4" required
+                            aria-required="true" aria-describedby="message-error"></textarea>
+                        <p id="message-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="photo" class="form-label">
+                            Photo <span class="required" aria-label="required">*</span>
+                        </label>
+                        <div class="file-input-wrapper">
+                            <input type="file" id="photo" name="photo" class="form-input-file" accept="image/*" required
+                                aria-required="true" aria-describedby="photo-error photo-help">
+                            <label for="photo" class="file-input-label">
+                                <span class="file-input-text">Choose a file</span>
+                                <span class="file-input-button">Browse</span>
+                            </label>
+                            <p id="photo-preview" class="file-name"></p>
+                        </div>
+                        <p id="photo-help" class="form-help">Max file size: 10MB. Supported formats: JPG, PNG, GIF</p>
+                        <p id="photo-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div id="form-feedback" class="form-feedback" role="status" aria-live="polite"></div>
+
+                    <div class="form-actions">
+                        <button type="button" class="button button-secondary" id="cancel-btn">Cancel</button>
+                        <button type="submit" class="button button-primary">Post Crumb</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
     </main>
 
     <script type="module" src="js/feed_crumbs.js"></script>
