feat: add community in navbar

--- a/work_phase_4/crumbs_map.html
+++ b/work_phase_4/crumbs_map.html
@@ -21,6 +21,7 @@
             <li><a href="home_page.html"><span>🏚️</span></a></li>
             <li><a href="feed_crumbs.html"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html" aria-current="page"><span>🗺️</span></a></li>
+            <li><a href="community.html"><span>👥</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
@@ -28,6 +29,7 @@
             <li><a href="home_page.html"><span>Home</span></a></li>
             <li><a href="feed_crumbs.html"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html" aria-current="page"><span>CrumbsMap</span></a></li>
+            <li><a href="community.html"><span>OZvent</span></a></li>
         </ul>
     </nav>
     <main class="crumbs-layout-container">
