--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -19,6 +19,7 @@
             <li><a href="home_page.html"><span>🏚️</span></a></li>
             <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
+            <li><a href="community.html"><span>👥</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
@@ -26,6 +27,7 @@
             <li><a href="home_page.html"><span>Home</span></a></li>
             <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
+            <li><a href="community.html"><span>OZvent</span></a></li>
         </ul>
     </nav>
     <main class="crumbs-layout-container">
