--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -18,6 +18,7 @@
             <li><a href="home_page.html" aria-current="page"><span class="icon">🏚️</span></a></li>
             <li><a href="feed_crumbs.html"><span class="icon">🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
+            <li><a href="community.html"><span>👥</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
@@ -25,6 +26,7 @@
             <li><a href="home_page.html" aria-current="page"><span class="icon">Home</span></a></li>
             <li><a href="feed_crumbs.html"><span class="icon">FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
+            <li><a href="community.html"><span>OZvent</span></a></li>
         </ul>
     </nav>
     <main>
