--- a/work_phase_4/index.html
+++ b/work_phase_4/index.html
@@ -16,7 +16,7 @@
     </section>
     <nav>
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="./home_page.html">Home</a>
         </nav>
     </nav>
 </body>
