--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/page_css/home_page.css" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 </head>
 
 <body>
