feat: add crumbings on navbar

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -21,6 +21,7 @@
             <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
             <li><a href="community.html"><span>👥</span></a></li>
+            <li><a href="crumbings.html"><span>👥</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
@@ -29,6 +30,7 @@
             <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
             <li><a href="community.html"><span>OZvent</span></a></li>
+            <li><a href="crumbings.html"><span>Crumbings</span></a></li>
         </ul>
     </nav>
     <main class="crumbs-layout-container">
