--- a/work_phase_4/community.html
+++ b/work_phase_4/community.html
@@ -20,6 +20,7 @@
             <li><a href="feed_crumbs.html"><span class="icon">🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
             <li><a href="community.html" aria-current="page"><span>👥</span></a></li>
+            <li><a href="crumbings.html"><span>👥</span></a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
@@ -28,6 +29,7 @@
             <li><a href="feed_crumbs.html"><span class="icon">FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
             <li><a href="community.html" aria-current="page"><span>OZvent</span></a></li>
+            <li><a href="crumbings.html"><span>Crumbings</span></a></li>
         </ul>
     </nav>
     <main>
